# helios-math

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: helios-mathConfig.cmake.in
src/: TransformType.ixx  _module.ixx  helios-math-config.h  utils.ixx
src/concepts/: IsNumeric.ixx  README.md  _module.ixx
src/traits/: FloatingPointTypeTrait.ixx
src/transform/: README.md  _module.ixx  camera.ixx  model.ixx
src/types/: README.md  _module.ixx  aabb.ixx  mat4.ixx  quat.ixx  vec2.ixx  vec3.ixx  vec4.ixx
tests/math/: utils.test.cpp
tests/math/transform/: camera.test.cpp  transform.test.cpp
tests/math/types/: mat4.test.cpp  quat.test.cpp  vec2.test.cpp  vec3.test.cpp  vec4.test.cpp
